log
Thu May 12 12:02:28 HSP 2022: 
 tests:  0|5
total_score: 0/70
5a929c5
Thu May 12 12:16:34 HSP 2022: 
 sudoku.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:62:11: error: statement with no effect [-Werror=unused-value]
           for (newValue; newValue < 9; newValue++)
           ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
afdaca2
Thu May 12 12:17:06 HSP 2022: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
a5f9912
Thu May 12 12:17:52 HSP 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
0026945
Thu May 12 19:34:23 HSP 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
839f10d
Thu May 12 19:36:15 HSP 2022: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:65:17: error: the address of 'is_valid' will always evaluate as 'true' [-Werror=address]
             if (is_valid)
                 ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
ad49126
Thu May 12 19:36:29 HSP 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:65:26: error: comparison between pointer and integer [-Werror]
             if (is_valid == 1)
                          ^~
cc1.exe: all warnings being treated as errors
Compilation failed
8fd5cc2
Thu May 12 19:36:43 HSP 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
51822a9
Thu May 12 19:45:01 HSP 2022: 
 sudoku.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
10e4cf7
Thu May 12 19:45:49 HSP 2022: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|5
total_score: 0/70
426a250
Thu May 12 19:48:01 HSP 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
7194c54
Thu May 12 20:12:04 HSP 2022: 
 sudoku.c | 16 +++++++++++-----
 1 file changed, 11 insertions(+), 5 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:50:9: error: unused variable 'submatriz' [-Werror=unused-variable]
     int submatriz[10] = {0,0,0,0,0,0,0,0,0,0};
         ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
2fb3de8
Thu May 12 20:12:13 HSP 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
ce4b1eb
Thu May 12 20:15:41 HSP 2022: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:61:14: error: expected expression before '{' token
       fila = {0,0,0,0,0,0,0,0,0,0,0};
              ^
Compilation failed
7938033
Thu May 12 20:19:20 HSP 2022: 
 sudoku.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
904524a
Thu May 12 20:20:03 HSP 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
33a7484
Thu May 12 20:20:47 HSP 2022: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
444e404
Thu May 12 20:22:33 HSP 2022: 
 sudoku.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
 tests:  2|4
total_score: 15/70
448edb0
Thu May 12 20:26:45 HSP 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
8151619
Thu May 12 20:29:51 HSP 2022: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
4424440
Thu May 12 20:38:52 HSP 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
ab03d7e
Thu May 12 20:43:12 HSP 2022: 
 sudoku.c | 22 +++++-----------------
 1 file changed, 5 insertions(+), 17 deletions(-)
 tests:  2|4
total_score: 15/70
bf32025
Thu May 12 20:50:56 HSP 2022: 
 sudoku.c | 12 ++++++++----
 1 file changed, 8 insertions(+), 4 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:49:10: error: unused variable 'columna' [-Werror=unused-variable]
     int *columna = calloc(10, sizeof(int));
          ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
ffa80f1
Thu May 12 20:51:01 HSP 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
32168d8
Thu May 12 20:51:52 HSP 2022: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|4
total_score: 15/70
d4860c9
Thu May 12 20:53:45 HSP 2022: 
 sudoku.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
0761361
Thu May 12 20:57:46 HSP 2022: 
 sudoku.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
d75e241
Thu May 12 21:01:38 HSP 2022: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  3|3
total_score: 25/70
fb67df2
Thu May 12 21:44:57 HSP 2022: 
 sudoku.c | 16 ++--------------
 1 file changed, 2 insertions(+), 14 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:49:10: error: unused variable 'columna' [-Werror=unused-variable]
     int *columna = calloc(10, sizeof(int));
          ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
63dd622
Thu May 12 21:45:07 HSP 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
5e09d77
Thu May 12 21:53:15 HSP 2022: 
 sudoku.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  3|3
total_score: 25/70
a89c12a
Thu May 12 22:33:47 HSP 2022: 
 sudoku.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  3|3
total_score: 25/70
5a85233
Thu May 12 22:34:32 HSP 2022: 
 sudoku.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  6|2
total_score: 45/70
617f04e
Thu May 12 22:35:00 HSP 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
e4b1fe4
Thu May 12 22:36:24 HSP 2022: 
 sudoku.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
136ca27
Thu May 12 22:41:27 HSP 2022: 
 sudoku.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  6|2
total_score: 45/70
1d5fc01
Thu May 12 22:42:20 HSP 2022: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  6|2
total_score: 45/70
c56ff64
Thu May 12 22:46:41 HSP 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:47:21: error: variable 'kSub' set but not used [-Werror=unused-but-set-variable]
     int i, k, iSub, kSub;
                     ^~~~
sudoku.c:47:15: error: variable 'iSub' set but not used [-Werror=unused-but-set-variable]
     int i, k, iSub, kSub;
               ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
9a7d6af
